[package]
name = "rand-pwd-win"
version = "0.1.0"
authors = ["TEN.X <oncwnuBkzxnpWlwosSe-9MnF14Pk@git.weixin.qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.1"
rand = "0.7.3"
rayon = "1.3.1"
typenum = "1.12.0"
heapless = "0.5.5"
num-bigint = "0.3.0"
num-traits = "0.2.12"
lazy_static = "1.4.0"
