[package]
name = "lib-test"
version = "0.1.0"
authors = ["TEN.X <oncwnuBkzxnpWlwosSe-9MnF14Pk@git.weixin.qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grp = { git = "https://github.com/TENX-S/grp.git" }
iced = { git =  "https://github.com/TENX-S/iced.git" }